--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ html,
 body {
   position: relative;
   height: 100%;
+  font-family: "Poppins";
 }
 
 .title {
@@ -30,7 +31,7 @@ body {
   padding: 20px 0 0 0;
 }
 
-.logo-brand{
+.logo-brand {
   background-color: #ffffff;
   padding: 2.5%;
   border-radius: 0 0 10px 10px;
@@ -39,7 +40,7 @@ body {
   z-index: 10;
 }
 
-.logo-brand img{
+.logo-brand img {
   width: 89px;
   height: 117px;
 }
@@ -154,7 +155,7 @@ body {
   padding: 15px 25px;
 }
 
-.register img{
+.register img {
   display: flex;
   flex-direction: row;
   margin: auto 0;
@@ -162,7 +163,7 @@ body {
   height: 57px;
 }
 
-.register a{
+.register a {
   display: flex;
   flex-direction: row;
   color: #ffffff;
@@ -175,27 +176,68 @@ body {
   font-weight: 600;
 }
 
-.rating{
+.rating {
   margin-top: 8.3%;
 }
 
-.rating i{
+.rating i {
   font-size: 20px;
-  color: #FFA110;
+  color: #ffa110;
   margin: 0 2px;
 }
 
-.photo-hero{
+.photo-hero {
   top: 51%;
   right: 0;
   position: absolute;
 }
 
-.photo-hero img{
+.photo-hero img {
   right: 0;
   position: absolute;
   width: 100%;
   height: 630px;
 }
 
+.rating a {
+  font-size: 20px;
+  color: #ffffff;
+  margin: 0 2px;
+  text-decoration: none;
+}
 
+.rating span {
+  font-size: 27px;
+  font-weight: bold;
+  color: #ffffff;
+  margin: 0 2px;
+  text-decoration: none;
+}
+
+#brand {
+  margin-top: 15%;
+}
+
+#brand h3 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #0f345e;
+}
+
+#content-creator {
+  margin-top: 10%;
+}
+
+#content-creator .creator {
+  margin: auto 0;
+}
+
+#content-creator h3 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #0f345e;
+}
+
+#content-creator .check-creator {
+  margin: 25px 0px;
+}
