--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,10 +221,10 @@ body {
   margin-top: 20%;
 }
 
-#brand hr{
-  color: #FFCA1D;
+#brand hr {
+  color: #ffca1d;
   width: 7%;
-  border: 6px solid #FFCA1D;
+  border: 6px solid #ffca1d;
   border-radius: 10px;
   opacity: 1;
 }
@@ -235,10 +235,9 @@ body {
   color: #0f345e;
 }
 
-#brand img{
+#brand img {
   margin: auto 0;
 }
-
 
 /* Content Creator */
 
@@ -250,12 +249,12 @@ body {
   margin: auto 0;
 }
 
-#content-creator .creator span{
+#content-creator .creator span {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   position: absolute;
-  background-color: #FFCA1D;
+  background-color: #ffca1d;
   z-index: -1;
   margin: auto;
 }
@@ -267,7 +266,7 @@ body {
   color: #0f345e;
 }
 
-.creator > p{
+.creator > p {
   font-size: 20px;
 }
 
@@ -275,19 +274,19 @@ body {
   margin: 25px 0px;
 }
 
-#content-creator .check-creator img{
+#content-creator .check-creator img {
   display: inline-block;
   margin: 1% 0;
 }
 
-#content-creator .check-creator p{
+#content-creator .check-creator p {
   display: inline-block;
   margin: auto 2%;
 }
 
 /* amd academy */
 
-#amd-academy{
+#amd-academy {
   margin-top: 16%;
   width: 100%;
   height: 380px;
@@ -296,7 +295,7 @@ body {
   background-repeat: no-repeat;
 }
 
-#amd-academy h1{
+#amd-academy h1 {
   color: #ffffff;
   text-align: center;
   font-weight: 700;
@@ -305,11 +304,40 @@ body {
   margin: 8% 0;
 }
 
-#amd-academy span{
+#amd-academy span {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   position: absolute;
-  background-color: #FFCA1D;
+  background-color: #ffca1d;
   z-index: 1;
+}
+
+#icon-amd {
+  margin: -100px 0px 86px 0px;
+}
+
+#study h3 {
+  font-size: 34px;
+  margin: 0 0 5% 2%;
+  font-weight: bold;
+  color: #0f345e;
+}
+
+#study p {
+  font-size: 16px;
+  margin: 0 0 5% 2%;
+  color: #434343;
+  font-family: "Poppins";
+}
+
+#study custom-card h5 {
+  font-weight: bold;
+}
+
+#study custom-card p {
+  font-size: 16px;
+  margin: 0 0 5% 2%;
+  color: #434343;
+  font-family: "Poppins";
 }
