--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,7 +439,7 @@ body {
   margin-top: 10%;
 }
 
-#register h6 {
+#register h4 {
   font-size: 24px;
   margin: 0 0 5% 0;
   font-weight: bold;
@@ -567,18 +567,42 @@ body {
   color: rgba(67, 67, 67, 0.6);
 }
 
+/* Team */
+#team h3 {
+  font-size: 34px;
+  margin: 0 0 5% 0;
+  font-weight: bold;
+  color: #0f345e;
+}
+
+#team p {
+  margin-top: 10%;
+  color: #0368ff;
+}
+
+#team span {
+  height: 30px;
+  width: 30px;
+  margin: 0% 0 0 1%;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #ffca1d;
+  z-index: -1;
+}
+
 /* faq */
 #faq h3 {
   font-size: 34px;
   margin: 5%;
   font-weight: bold;
   color: #0f345e;
+  margin-top: 10%;
 }
 
 #faq span {
   height: 30px;
   width: 30px;
-  margin: 8% 0 0 30%;
+  margin: 10% 0 0 31%;
   border-radius: 50%;
   position: absolute;
   background-color: #ffca1d;
